// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Includes with conditions > Consecutive includes with false condition in the middle > filelist 1`] = `
"[
  "index.md",
  "llms-full.txt",
  "llms.txt",
  "toc.yaml"
]"
`;

exports[`Includes with conditions > Consecutive includes with false condition in the middle > filelist 2`] = `
"[
  "index.html",
  "llms-full.txt",
  "llms.txt",
  "toc.js"
]"
`;

exports[`Includes with conditions > Consecutive includes with false condition in the middle 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Test Includes Conditions

<!-- source: includes/first.md -->
{% note info %}

This is the first include.

{% endnote %}
<!-- endsource: includes/first.md -->



<!-- source: includes/third.md -->
This is the third include.
<!-- endsource: includes/third.md -->
"
`;

exports[`Includes with conditions > Consecutive includes with false condition in the middle 2`] = `
"# Test Includes Conditions

{% note info %}

This is the first include.

{% endnote %}



This is the third include.
"
`;

exports[`Includes with conditions > Consecutive includes with false condition in the middle 3`] = `
"## Documentation

- [Test Includes Conditions](index.md)

---

For more comprehensive documentation, see [llms-full.txt](/llms-full.txt)
"
`;

exports[`Includes with conditions > Consecutive includes with false condition in the middle 4`] = `
"items:
  - name: Test Includes Conditions
    href: index.md
path: toc.yaml
"
`;

exports[`Includes with conditions > Consecutive includes with false condition in the middle 5`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Test Includes Conditions</title>
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;div class=\\"yfm-note yfm-accent-info\\" note-type=\\"info\\"&gt;&lt;p class=\\"yfm-note-title\\"&gt;Примечание&lt;/p&gt;/n&lt;div class=\\"yfm-note-content\\"&gt;&lt;p&gt;This is the first include.&lt;/p&gt;/n&lt;/div&gt;&lt;/div&gt;/n/n&lt;p&gt;This is the third include.&lt;/p&gt;/n/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"}],"vcsPath":"index.md"},"headings":[],"title":"Test Includes Conditions"},"router":{"pathname":"index","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
    </body>
</html>"
`;

exports[`Includes with conditions > Consecutive includes with false condition in the middle 6`] = `
"# Test Includes Conditions

{% note info %}

This is the first include.

{% endnote %}



This is the third include.
"
`;

exports[`Includes with conditions > Consecutive includes with false condition in the middle 7`] = `
"## Documentation

- [Test Includes Conditions](index.md)

---

For more comprehensive documentation, see [llms-full.txt](/llms-full.txt)
"
`;

exports[`Includes with conditions > Consecutive includes with false condition in the middle 8`] = `"window.__DATA__.data.toc = {"items":[{"name":"Test Includes Conditions","href":"index.html","id":"UUID"}],"path":"toc.yaml","id":"UUID"};"`;
